--- a/css/main.css
+++ b/css/main.css
@@ -338,6 +338,20 @@ img {
   background: #188ce8;
 }
 
+.modal-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
 .burger {
   background-color: #ffffff;
   border: none;
