--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -156,3 +156,17 @@
     background: #188ce8;
   }
 }
+.modal-btn{
+   display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    
+    background-color: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+}
